@@ -1,5 +1,8 @@
 2006-05-10  Sven Panne  <sven.panne@aedion.de>
 
+	* tests/altest/altest.c(main,I_QueueTest,I_StereoTest): Remove #ifs for
+	ancient OpenAL versions on Linux.
+
 	* tests/altest/altest.c: Remove useless return statements.
 
 	* tests/altest/altest.c: Make the Ogg Vorbis test dynamic.
